--- a/manowar-site/index.html
+++ b/manowar-site/index.html
@@ -17,7 +17,7 @@
       <a href="#" class="text-2xl font-bold">Man O' War NG</a>
       <ul class="flex space-x-6">
         <li><a href="index.html" class="hover:underline">Home</a></li>
-        <li><a href="guidelines.html" class="hover:underline">Guidelines  </a></li>
+        <li><a href="guideline.html" class="hover:underline">Guidelines</a></li>
         <li><a href="create.html" class="hover:underline">Create</a></li>
         <li><a href="login.html" class="hover:underline">Login</a></li>
       </ul>
@@ -44,7 +44,7 @@
         </div>
       </div>
       <div class="lg:w-1/2">
-        <img src="https://recruitment.manowarng.org/assets/img/hero.png" alt="Man O' War" class="w-full h-auto rounded-lg shadow-lg"/>
+        <img src="commanders.jpeg" alt="Man O' War" class="w-full h-auto rounded-lg shadow-lg"/>
       </div>
     </div>
   </header>
